# dailies

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix
.github/workflows/: ci.yml
examples/: prompts.txt  template.md
lua/: dailies.lua
src/: config.rs  habit.rs  keywords.rs  main.rs  mdast.rs  todos.rs
