[package]
name = "dailies"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Daily journaling in plain markdown"
repository = "https://github.com/JachymPutta/dailies"
readme = "README.md"
keywords = ["dailies", "journal", "note-taking"]
categories = ["command-line-utilities"]
authors = ["Jachym Putta"]
exclude = [
    "examples/*",
]

[dependencies]
chrono = "0.4.40"
markdown = "1.0.0-alpha.23"
mdast_util_to_markdown = "0.0.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.0"
structopt = "0.3.26"
toml = "0.8.20"
